Lighten system status polling
